BSD fixes #285: Align card text center on the front.

--- a/stories/components/cards/cards.scss
+++ b/stories/components/cards/cards.scss
@@ -31,6 +31,7 @@
   }
 
   &__face--front {
+    text-align: center;
   }
 
   &__face--front .bix-icon {
